# Improved_detection_fraud_cases_for_ecommerce_and_bank_transactions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unittests.yml
config/: settings.py
notebooks/: fraud_detection_eda.ipynb
outputs/models/: credit_logreg_20250724_194929.pkl  ecom_xgb_20250724_175005.pkl
scripts/: main.py
src/core/: data_processing.py
src/models/: explainer.py  model_training.py
